--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,41 @@
-# requirements.txt records the full set of dependencies for development
 accelerate
 codetiming
 datasets
-dill
-hydra-core
 liger-kernel
-numpy<2.0.0
+numpy
+omegaconf
 pandas
 peft
-pyarrow>=19.0.0
-pybind11
+pillow
+pyarrow>=15.0.0
 pylatexenc
-pre-commit
+qwen-vl-utils
 ray[default]
-tensordict>=0.8.0,<=0.10.0,!=0.9.0
+tensordict
 torchdata
-transformers
-# vllm==0.8.4
+transformers==4.55.4
 wandb
-packaging>=20.0
-uvicorn
-fastapi
-latex2sympy2_extended
-math_verify
+ninja
+ninja2
+packaging
+latex2sympy2_extended==1.10.2
+flashinfer-python==0.5.0 
+flashinfer-cubin==0.5.0 
+vllm==0.10.2
+hydra-core
+omegaconf
+swanlab
+pynvml
+pysnooper==1.2.3
+torchcodec==0.7
+ffmpeg
+ffmpeg-python
+torchao
+seaborn
+fastmcp
+decord
+mathruler
+math-verify
 tensorboard
+opencv-python-headless==4.11.0.86
+huggingface-hub
